[tool.poetry]
name = "flaskrestful"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^3.7.4"
htmlparser = "^0.0.2"
importlib-metadata = "^3.9.0"
ordereddict = "^1.1"
python-ntlm = "^1.1.0"
zipp = "^3.4.1"
mypy-extensions = "^0.4.3"
keyring = "^23.0.1"
lxml = "^4.6.3"
brotli = "^1.0.9"
lockfile = "^0.12.2"
cryptography = "^3.4.7"
ipaddr = "^2.2.0"
flask = "^1.1.2"
flask-restful = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
